# JpegDecoder

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  decoder.cpp  decoder.h  fft.cpp  fft.h  file_reader.cpp  file_reader.h  huffman.cpp  huffman.h  image.h  jpeg_decoder  jpeg_decoder.cpp  jpeg_decoder.h  main.cpp  sources.cmake
